tests/analyzer/valid/0003_simple_calculation.tj
def add(x: int, y: int) -> int {
    return x + y
}

def subtract(a: int, b: int) -> int {
    return a - b
}
