tests/analyzer/invalid/0004_all_unused_params.tj
def all_unused(a: int, b: int, c: int) -> int {
    return 42
}

def some_unused(x: int, y: int, z: int) -> int {
    return x + z
}
